load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "verification",
)

cpplint()

lucid_cc_library(
    name = "barrier_certificate",
    srcs = [
        "BarrierCertificate.cpp",
        "FourierBarrierCertificate.cpp",
    ],
    hdrs = [
        "BarrierCertificate.h",
        "FourierBarrierCertificate.h",
    ],
    implementation_deps = [
        ":optimiser",
        "//lucid/lib:psocpp",
        "//lucid/model:kernel",
        "//lucid/util:constants",
        "//lucid/util:error",
        "//lucid/util:math",
        "//lucid/util:stats",
        "//lucid/util:timer",
    ],
    deps = [
        "//lucid/lib:eigen",
        "//lucid/model:estimator",
        "//lucid/model:feature_map",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "montecarlo_simulation",
    srcs = ["MontecarloSimulation.cpp"],
    hdrs = ["MontecarloSimulation.h"],
    implementation_deps = ["//lucid/util:error"],
    deps = [
        "//lucid/lib:eigen",
        "//lucid/model:set",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "optimiser",
    srcs = [
        "AlglibOptimiser.cpp",
        "GurobiOptimiser.cpp",
        "HighsOptimiser.cpp",
        "Optimiser.cpp",
        "SoplexOptimiser.cpp",
    ],
    hdrs = [
        "AlglibOptimiser.h",
        "GurobiOptimiser.h",
        "HighsOptimiser.h",
        "Optimiser.h",
        "SoplexOptimiser.h",
    ],
    implementation_deps = [
        "//lucid/lib:alglib",
        "//lucid/lib:gurobi",
        "//lucid/lib:highs",
        "//lucid/lib:soplex",
        "//lucid/util:error",
        "//lucid/util:logging",
        "//lucid/util:stats",
        "//lucid/util:timer",
    ] + select({
        "//tools:python_build": ["//bindings/pylucid:interrupt"],
        "//conditions:default": [],
    }),
    deps = [
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "verification",
    hdrs = ["verification.h"],
    visibility = ["//visibility:public"],
    deps = [
        "montecarlo_simulation",
        ":barrier_certificate",
        ":optimiser",
    ],
)
