"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_init_barrier_3",
    data = glob(["init_barrier_3/*"]),
    tags = ["integration"],
    deps = [
        "//lucid:lucid_hdr",
        "//lucid/lib:eigen",
        "//lucid/lib:gurobi",
        "//lucid/util:math",
    ],
)

lucid_cc_googletest(
    name = "test_init_c_s_overtaking",
    data = glob(["init_cs_overtaking/*"]),
    tags = ["integration"],
    deps = [
        "//lucid:lucid_hdr",
        "//lucid/lib:eigen",
        "//lucid/lib:gurobi",
        "//lucid/util:error",
        "//lucid/util:math",
    ],
)
