"""Integration tests."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_init_barrier_3",
    data = glob(["init_barrier_3/*"]) +
           select({
               "//tools:gurobi_build": ["gurobi.lic"],
               "//conditions:default": [],
           }),
    env = select({
        "//tools:gurobi_build": {"GRB_LICENSE_FILE": "$(location gurobi.lic)"},
        "//conditions:default": {},
    }),
    deps = [
        "//lucid:lucid_hdr",
        "//lucid/lib:eigen",
        "//lucid/lib:gurobi",
        "//lucid/util:math",
    ],
)

lucid_cc_googletest(
    name = "test_init_c_s_overtaking",
    size = "medium",
    data = glob(["init_cs_overtaking/*"]) +
           select({
               "//tools:gurobi_build": ["gurobi.lic"],
               "//conditions:default": [],
           }),
    env = select({
        "//tools:gurobi_build": {"GRB_LICENSE_FILE": "$(location gurobi.lic)"},
        "//conditions:default": {},
    }),
    deps = [
        "//lucid:lucid_hdr",
        "//lucid/lib:eigen",
        "//lucid/lib:gurobi",
        "//lucid/util:error",
        "//lucid/util:math",
    ],
)
