load("//tools:pytest.bzl", "pylucid_py_test")

pylucid_py_test(name = "test_main")

pylucid_py_test(name = "test_kernel")

pylucid_py_test(name = "test_optimiser")

pylucid_py_test(name = "test_regression")

pylucid_py_test(
    name = "test_integration",
    data = [
        "x_samples.matrix",
        "xp_samples.matrix",
    ] + select({
        "//tools:gurobi_build": ["gurobi.lic"],
        "//conditions:default": [],
    }),
    env = select({
        "//tools:gurobi_build": {"GRB_LICENSE_FILE": "$(location gurobi.lic)"},
        "//conditions:default": {},
    }),
)

pylucid_py_test(name = "test_set")
