load("//tools:pytest.bzl", "pylucid_py_test")

pylucid_py_test(name = "test_main")

pylucid_py_test(name = "test_kernel")

pylucid_py_test(name = "test_optimiser")

pylucid_py_test(name = "test_estimator")

pylucid_py_test(name = "test_set")

pylucid_py_test(name = "test_parser")

pylucid_py_test(name = "test_cli")

pylucid_py_test(name = "test_tuner")

pylucid_py_test(name = "test_feature_map")

pylucid_py_test(name = "test_stats")

pylucid_py_test(name = "test_montecarlo_simulation")

pylucid_py_test(name = "test_cross_validator")

pylucid_py_test(
    name = "test_linear",
    data = ["//tests/config:linear.yaml"],
)

pylucid_py_test(
    name = "test_barrier_2",
    data = ["//tests/config:barrier2.yaml"],
)

# pylucid_py_test(
#     name = "test_barrier_3",
#     data = ["//tests/config:barrier3.yaml"],
# )
