"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_rect_set",
    deps = ["//lucid/math:set"],
)

lucid_cc_googletest(
    name = "test_multi_set",
    deps = ["//lucid/math:set"],
)

lucid_cc_googletest(
    name = "test_tensor",
    deps = [
        "//lucid/math:tensor",
        "//lucid/util:exception",
    ],
)
