"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_rect_set",
    deps = ["//lucid/math:set"],
)

lucid_cc_googletest(
    name = "test_multi_set",
    deps = ["//lucid/math:set"],
)

lucid_cc_googletest(
    name = "test_kernel_ridge_regression",
    deps = ["//lucid/math:regression"],
)

lucid_cc_googletest(
    name = "test_feature_map",
    deps = [
        "//lucid/math:feature_map",
        "//lucid/util:math",
    ],
)

lucid_cc_googletest(
    name = "test_tensor",
    deps = [
        "//lucid/math:tensor",
        "//lucid/util:exception",
    ],
)
