"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_logging",
    deps = ["//lucid/util:logging"],
)

lucid_cc_googletest(
    name = "test_index_iterator",
    deps = [
        "//lucid/util:exception",
        "//lucid/util:index_iterator",
    ],
)

lucid_cc_googletest(
    name = "test_self_reference_counting_object",
    deps = [
        "//lucid/util:intrusize_ptr",
        "//lucid/util:self_reference_counting_object",
    ],
)
