"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "lucid_cc_googletest")

lucid_cc_googletest(
    name = "test_fourier_barrier_certificate",
    deps = [
        "//lucid/verification:barrier_certificate",
    ],
)

lucid_cc_googletest(
    name = "test_gurobi_optimiser",
    deps = [
        "//lucid/lib:gurobi",
        "//lucid/util:exception",
        "//lucid/verification:optimiser",
    ],
)

lucid_cc_googletest(
    name = "test_montecarlo_simulation",
    deps = [
        "//lucid/util:exception",
        "//lucid/util:random",
        "//lucid/verification:montecarlo_simulation",
    ],
)
